2013-05-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	- 統計情報をQLabelに表示するように変更

	* src/model/Makefile.am:
	* src/model/action_sequence_description.cpp:
	* src/model/action_sequence_description.h:
	* src/model/action_sequence_log_parser.cpp:
	* src/model/action_sequence_log_parser.h:
	* src/model/main_data.cpp:
	* src/model/main_data.h:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/evaluator_control_panel.cpp:
	* src/model/chain_action_data.cpp:
	* src/model/action_sequence_description.cpp:
	* src/model/chain_action_data.h:
	* src/model/action_sequence_description.h:
	* src/model/chain_action_log_parser.cpp:
	* src/model/action_sequence_log_parser.cpp:
	* src/model/chain_action_log_parser.h:
	* src/model/action_sequence_log_parser.h:
	- ChainをActionSequenceへリネーム
	- 行動列ビューでソートを有効化

	* src/model/chain_action_data.cpp:
	* src/model/chain_action_data.h:
	* src/model/chain_action_log_parser.cpp:
	* src/model/chain_action_log_parser.h:
	* src/qt4/action_sequence_selector.cpp:
	- 行動列ログパーサ周辺のコード整理

	* src/model/options.cpp:
	* src/model/options.h:
	* src/model/point.h:
	* src/qt4/ball_painter.cpp:
	* src/qt4/ball_painter_rcss.cpp:
	* src/qt4/ball_trace_painter.cpp:
	* src/qt4/debug_log_painter.cpp:
	* src/qt4/debug_painter.cpp:
	* src/qt4/field_canvas.cpp:
	* src/qt4/field_evaluation_painter.cpp:
	* src/qt4/field_painter.cpp:
	* src/qt4/offside_line_painter.cpp:
	* src/qt4/player_control_painter.cpp:
	* src/qt4/player_painter.cpp:
	* src/qt4/player_painter_rcss.cpp:
	* src/qt4/player_trace_painter.cpp:
	* src/qt4/score_board_painter.cpp:
	* src/qt4/voronoi_diagram_painter.cpp:
	- スクリーン座標値をすべて実数で扱うように変更

	* src/model/agent_id.h:
	* src/model/options.cpp:
	* src/model/options.h:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/evaluation_window.cpp:
	* src/qt4/evaluator_control_panel.cpp:
	* src/qt4/field_evaluation_painter.cpp: