@@ -1,3 +1,8 @@
+2013-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/model/action_sequence_log_parser.cpp:
+	- ActionStatePairノードのIDの読み取りに対応
+
 2013-05-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/qt4/action_sequence_selector.cpp:
